--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@
   } */
 
   header {
+    @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 transition-all lg:px-10;
     @apply fixed top-0 z-50 flex w-full items-center justify-between
      px-4 py-4 transition-all lg:px-10 lg:py-6;
   }
@@ -36,6 +37,9 @@
     @apply flex h-11 w-11 items-center justify-center rounded-full border-2 border-[gray] bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10;
   }
 }
+
+
+
 
 
 
